# Gazebo_Projectile

./: CMakeLists.txt  README.md  package.xml
launch/: box.launch
models/cardboard_box/: model.config  model.sdf
src/: projectile_plugin.cc
